# kamid

./: .cirrus.yml  .gitignore  9p.7  9pclib.c  9pclib.h  Makefile  Makefile.am  Makefile.inc  README.md  TODO  client.c  client.h  compat.h  configure.ac  control.c  control.h  ctl_parser.c  ctl_parser.h  ftp.c  kamictl.8  kamictl.c  kamid-version.mk  kamid.8  kamid.c  kamid.conf.5  kamid.h  kamiftp.1  kamirepl.1  kamirepl.c  listener.c  listener.h  log.c  log.h  ninepscript.5  ninepscript.8  np.y  parse.y  run-extra-tests.sh  run-tests.sh  sandbox.c  (+8 more)
compat/: Makefile.am  arc4random.c  dummy.c  errc.c  freezero.c  getprogname.c  setprogname.c  setresgid.c  setresuid.c  strsep.c  vis.c
contrib/: .gitignore  9ps-mode.el  Makefile  Makefile.am  README.md  fingerprint  gencert  kamid.service
kamictl/: Makefile  Makefile.am  ctl_parser.c  ctl_parser.h  kamictl.c
kamid/: 9p.7  ChangeLog  Makefile  Makefile.am  client.c  client.h  control.c  control.h  kamid.8  kamid.c  kamid.conf.5  kamid.h  listener.c  listener.h  parse.y  table.c  table.h  table_static.c
kamiftp/: Makefile  Makefile.am  ftp.c  kamiftp.1  kamiftp.h  rl.c
kamiproxy/: Makefile.am  kamiproxy.1  proxy.c
kamirepl/: Makefile  Makefile.am  kamirepl.1  kamirepl.c
lib/: 9pclib.c  9pclib.h  Makefile  kami.h  log.c  log.h  sandbox.c  sandbox.h  utils.c  utils.h
ninepscript/: Makefile  Makefile.am  ninepscript.5  ninepscript.8  parse.y  script.c  script.h
regress/: Makefile  Makefile.am  Makefile.inc  consts.9ps  io-suite.9ps  lib.9ps  misc-suite.9ps  sample.9ps  simple.9ps  super-simple.9ps  t.9ps  walk-suite.9ps
regress/lisp/: Makefile  Makefile.am  run.sh
regress/lisp/9p-test/: 9p-test.asd  all-tests.lisp  client.lisp  conditions.lisp  filesystem-utils.lisp  kami-tests.lisp  message-types.lisp  misc-utils.lisp  package.lisp  run-tests.sh  text-utils.lisp
regress/lisp/9p-test/tests/: all-tests.lisp  kami-tests.lisp  package.lisp
regress/ninepscript/: Makefile  Makefile.am  consts.9ps  io-suite.9ps  lib.9ps  misc-suite.9ps  walk-suite.9ps
regress/root/: test-file
site/: Makefile  README.md  caveats.gmi  footer.html  gem2html  gem2html.awk  header.html  index.gmi  install.gmi  mdoc2html.sh  menu.pl  style.css  subst  tutorial.gmi
